--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     .body{
         height: 300px;
         width: 250px;
-        background-color: #3d3d5c;
+        background-color: #0d0d0f;
         margin: 20px auto;
         border-radius: 10px;
         padding: 20px;
         padding-top: 40px;
+        
     }
    .screen{
-    background-color: #68811d;
+    background-color: #9bb353;
     text-align: right;
     width: 220px;
     display: block;
@@ -37,31 +38,31 @@
 
    }
    .Btn{
-    width: 50px;
+    width: 55px;
     text-align: center;
     padding: 2px 0;
     font-size: 20px;
     margin: 3PX;
     border: 0.5px solid black;
-    border-radius: 5px;
+    border-radius: 10px;
     cursor: pointer;
    }
    .Btn:hover{
-    box-shadow: 0 0 5px 0 #fff;
+    box-shadow: 0 0 10px 0 #cb8383;
     transition: 0.5s;
    }
    .Btn-equals{
-    background-color: #ff6348;
+    background-color: orangered;
     height: 70px;
     width: 50px;
     color: white;
     font-size: 25px;
-    border-radius: 5px;
+    border-radius: 10px;
     border: 0.5 solid black;
     cursor: pointer;
    }
    .Btn-equals:hover{
-    box-shadow: 0 0 5px 0 #fff;
+    box-shadow: 0 0 5px 0 #e29595;
     transition: 0.5s;
 
    }
